[gd_scene load_steps=3 format=3 uid="uid://bigiyu1id210e"]

[ext_resource type="Script" path="res://src/Scripts/Interfaces/player_inventory.gd" id="1_82wuk"]
[ext_resource type="PackedScene" uid="uid://dk5rr3nngbcnj" path="res://src/Scenes/Interfaces/Slot.tscn" id="2_wrp36"]

[node name="Inventory" type="Control"]
layout_mode = 3
anchors_preset = 0
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_82wuk")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -121.0
offset_top = -95.0
offset_right = 52.0
offset_bottom = 94.0
color = Color(0.0629729, 0.419512, 0.514648, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(180, 150)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -117.0
offset_top = -75.0
offset_right = 63.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2

[node name="SideBar" type="Panel" parent="HBoxContainer"]
custom_minimum_size = Vector2(50, 150)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/SideBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -22.0
offset_top = -69.0
offset_right = 22.0
offset_bottom = 69.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="ButtonContainer" type="VBoxContainer" parent="HBoxContainer/SideBar/MarginContainer"]
layout_mode = 2

[node name="WeaponsTabButton" type="Button" parent="HBoxContainer/SideBar/MarginContainer/ButtonContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 7
text = "Weap."

[node name="RecipesTabButton" type="Button" parent="HBoxContainer/SideBar/MarginContainer/ButtonContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 7
text = "Recipes"

[node name="AccessoriesTabButton" type="Button" parent="HBoxContainer/SideBar/MarginContainer/ButtonContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 7
text = "Access."

[node name="DripTabButton" type="Button" parent="HBoxContainer/SideBar/MarginContainer/ButtonContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 7
text = "Drip"

[node name="ConsumablesTabButton" type="Button" parent="HBoxContainer/SideBar/MarginContainer/ButtonContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 7
text = "Consume"

[node name="MaterialsTabButton" type="Button" parent="HBoxContainer/SideBar/MarginContainer/ButtonContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 7
text = "Materials"

[node name="ListArea" type="Panel" parent="HBoxContainer"]
custom_minimum_size = Vector2(110, 150)
layout_mode = 2
size_flags_vertical = 0

[node name="TabTitle" type="Label" parent="HBoxContainer/ListArea"]
layout_mode = 0
offset_left = 9.0
offset_top = 1.0
offset_right = 50.0
offset_bottom = 24.0
theme_override_font_sizes/font_size = 9
text = "Weapons"

[node name="CurrencyCounter" type="Label" parent="HBoxContainer/ListArea"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -109.0
offset_top = 2.0
offset_right = 53.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 10
text = "Currency: 100000"

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/ListArea"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 9.0
offset_top = 14.0
offset_right = -5.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/ListArea/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 2
theme_override_constants/margin_left = 1
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 3

[node name="GridContainer" type="GridContainer" parent="HBoxContainer/ListArea/ScrollContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 4

[node name="InventorySlot" parent="HBoxContainer/ListArea/ScrollContainer/MarginContainer/GridContainer" instance=ExtResource("2_wrp36")]
layout_mode = 2
size_flags_horizontal = 4

[node name="InventorySlot2" parent="HBoxContainer/ListArea/ScrollContainer/MarginContainer/GridContainer" instance=ExtResource("2_wrp36")]
layout_mode = 2

[node name="InventorySlot3" parent="HBoxContainer/ListArea/ScrollContainer/MarginContainer/GridContainer" instance=ExtResource("2_wrp36")]
layout_mode = 2

[node name="InventorySlot4" parent="HBoxContainer/ListArea/ScrollContainer/MarginContainer/GridContainer" instance=ExtResource("2_wrp36")]
layout_mode = 2

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = -117.0
offset_top = -94.0
offset_right = -61.0
offset_bottom = -77.0
theme_override_font_sizes/font_size = 12
text = "Inventory"

[connection signal="button_down" from="HBoxContainer/SideBar/MarginContainer/ButtonContainer/WeaponsTabButton" to="." method="_on_weapons_tab_button_button_down"]
[connection signal="button_down" from="HBoxContainer/SideBar/MarginContainer/ButtonContainer/RecipesTabButton" to="." method="_on_recipes_tab_button_button_down"]
[connection signal="button_down" from="HBoxContainer/SideBar/MarginContainer/ButtonContainer/AccessoriesTabButton" to="." method="_on_accessories_tab_button_button_down"]
[connection signal="button_down" from="HBoxContainer/SideBar/MarginContainer/ButtonContainer/DripTabButton" to="." method="_on_drip_tab_button_button_down"]
[connection signal="button_down" from="HBoxContainer/SideBar/MarginContainer/ButtonContainer/ConsumablesTabButton" to="." method="_on_consumables_tab_button_button_down"]
[connection signal="button_down" from="HBoxContainer/SideBar/MarginContainer/ButtonContainer/MaterialsTabButton" to="." method="_on_materials_tab_button_button_down"]
